[build-system]
requires = ["pdm-backend == 2.1.*"]
build-backend = "pdm.backend"

[project]
name = "textmatch"
version = "1.0.1"
description = "Find fuzzy matches between datasets."
readme = "README.md"
requires-python = "== 3.11.*"
license-expression = "Apache-2.0"
urls.repository = "https://github.com/maxharlow/textmatch"
authors = [
    {name = "Max Harlow", email = "contact@maxharlow.com"}
]
dependencies = [
    "polars[pyarrow,pandas] == 0.20.*",
    "polars-distance == 0.4.*",
    "colorama == 0.4.*",
    "unidecode == 1.3.*",
    "doublemetaphone == 1.1.*",
    "dedupe == 2.0.*"
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pyright",
    "pytest",
    "pytest-benchmark",
    "faker"
]

[tool.pdm.scripts]
typechecker = "pyright"
tests = "pytest tests/functional.py --verbose"
speed-benchmarks = "pytest tests/benchmarks.py --verbose --benchmark-group-by=name --benchmark-min-rounds=100 --benchmark-autosave --benchmark-compare"
