[build-system]
requires = ["pdm-backend == 2.4.*"]
build-backend = "pdm.backend"

[project]
name = "textmatch"
version = "1.1.0"
description = "Find fuzzy matches between datasets."
readme = "README.md"
requires-python = "== 3.13.*"
license = "Apache-2.0"
urls.source = "https://github.com/maxharlow/textmatch"
authors = [
    {name = "Max Harlow", email = "contact@maxharlow.com"}
]
dependencies = [
    "polars[pyarrow,pandas] == 1.30.*",
    "polars-distance == 0.5.*",
    "colorama == 0.4.*",
    "unidecode == 1.4.*",
    "doublemetaphone == 1.2.*",
    "dedupe == 3.0.*"
]

[dependency-groups]
lint = [
    "ruff"
]
typecheck = [
    "pyright"
]
test = [
    "pytest",
    "pytest-benchmark",
    "faker"
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
linter = "ruff check"
typechecker = "pyright"
tests = "pytest tests/functional.py --verbose"
speed-benchmarks = "pytest tests/benchmarks.py --verbose --benchmark-group-by=name --benchmark-min-rounds=100 --benchmark-autosave --benchmark-compare"

[tool.ruff.lint]
ignore = ["E701"]
